Minor fixes around notifications
1. addFriendRequestAccepted template
2. projectInvitation template
3. Minor improvement of notification process logic (mp-notification.coffee)
4. Add perfect scrollbar to md-side-menu, minor layout fix (clearfix)

--- a/app/assets/stylesheets/modules/md-side-menu.scss
+++ b/app/assets/stylesheets/modules/md-side-menu.scss
@@ -1,7 +1,7 @@
 .md-side-menu {
   background-color: white;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
 }
 
 // --- Outside ---
